src/objects/PicklistForFlow__c.object
<CustomObject>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickListLabel__c</fullName>
        <label>PickListLabel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickListValue__c</fullName>
        <label>PickListValue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistFieldName__c</fullName>
        <label>PicklistFieldName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PicklistForFlow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>PicklistFieldName__c</columns>
        <columns>PickListLabel__c</columns>
        <columns>PickListValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FPV{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PicklistsforFlow</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>